# EventManager

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: urls.py
api/events/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/events/migrations/: 0001_initial.py  0002_eventregistration.py
api/mixins/: filters.py
api/users/: admin.py  manager.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py
core/: asgi.py  celery.py  settings.py  wsgi.py
scripts/: run.sh
